Bug 325387 - background checker alpha pattern display wrong noise/dark/pattern
Summary: background checker alpha pattern display wrong noise/dark/pattern
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-28 12:00 UTC by David REVOY
Modified: 2013-09-28 12:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
What I actually get on screen ; the wrong pattern for transparency (535.72 KB, image/jpeg)
2013-09-28 12:01 UTC, David REVOY
Details
My Kritarc ( I cleaned manually in it 'recentfiles' section to protect privacy of my actual client ) (19.52 KB, application/octet-stream)
2013-09-28 12:33 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2013-09-28 12:00:17 UTC
In attachement , a visual of what happen if I erase a white canvas with a large eraser brush : the background checker alpha pattern display wrong noise/dark/pattern. This happen only using  OpenGL canvas. Tested on my two computer ; Intel HD , and Nvidia proprietary driver.

other infos on both machines :
XFCE desktop, without compositing
---
Linux workstation 3.10.12-1-MANJARO #1 SMP PREEMPT Sat Sep 14 18:48:49 UTC 2013 x86_64 GNU/Linux
---
Compiled for arch: ::Vc::SSE41Impl 
Features supported: 
	 "SSE2" 	---	 yes 
	 "SSE3" 	---	 yes 
	 "SSSE3" 	---	 yes 
	 "SSE4.1" 	---	 yes 
	 "SSE4.2" 	---	 no 
	 "SSE4a" 	---	 no 
	 "AVX " 	---	 no 
Qt: 4.8.5
KDE Development Platform: 4.11.1
Krita: 2.8 Pre-Alpha
---
Comment 1 David REVOY 2013-09-28 12:01:16 UTC
Created attachment 82521 [details]
What I actually get on screen ; the wrong pattern for transparency
Comment 2 Halla Rempt 2013-09-28 12:03:54 UTC
Does that happen on both cards? On my intel card, I cannot reproduce the effect :-(. And does it also happen if you start with a transparent image?
Comment 3 David REVOY 2013-09-28 12:19:01 UTC
I had the feeling trying Krita with a blank 'kritarc' would help. It does. The issue is solved here now. I kept the old Kritarc around. 

Yes, it happenned on both card ; but because both install shared same kritarc 
And yes, starting with a transparent image also.

Here is a (temporary) 25MB video link to see the old effect I had in motion,  : http://www.davidrevoy.com/XYZ/alphabug-temp-vid.avi

Now, I have to figure what to delete on my old kritarc to get rid of this bug.
Comment 4 Halla Rempt 2013-09-28 12:22:08 UTC
Can you attach the kritarc file to the bug so I can have a look?
Comment 5 David REVOY 2013-09-28 12:29:46 UTC
@Boud : I feel stupid :  reseting the kritarc made Krita back to use Qpainter ; and no more OpenGL. That's why I could saw transparency. In fact ; removing kritarc don't solve it. Sorry.
I'll attach my kritarc file too.
Comment 6 Halla Rempt 2013-09-28 12:30:21 UTC
Aw...
Comment 7 Halla Rempt 2013-09-28 12:32:58 UTC
Git commit 8001b7ac0e5c7fa2680309c851a53ff76723bd6a by Boudewijn Rempt.
Committed on 28/09/2013 at 12:32.
Pushed by rempt into branch 'master'.

PSD: Do not halt on misformed resource blocks

M  +2    -1    krita/plugins/formats/psd/psd_resource_section.cpp

http://commits.kde.org/calligra/8001b7ac0e5c7fa2680309c851a53ff76723bd6a
Comment 8 David REVOY 2013-09-28 12:33:56 UTC
Created attachment 82522 [details]
My Kritarc ( I cleaned manually in it 'recentfiles' section to protect privacy of my actual client )
Comment 9 Halla Rempt 2013-09-28 12:34:18 UTC
Oops I tried to close https://bugs.kde.org/show_bug.cgi?id=324373
Comment 10 Halla Rempt 2013-09-28 12:39:02 UTC
Ah, I bet it's because of this:

checksize=4
Comment 11 Halla Rempt 2013-09-28 12:46:51 UTC
Git commit 5be4f8fdd542a455a51a69670c545098136fe760 by Boudewijn Rempt.
Committed on 28/09/2013 at 12:46.
Pushed by rempt into branch 'master'.

Make it possible to have checks smaller than 32x32 in the opengl canvas

M  +5    -4    krita/ui/opengl/kis_opengl_image_textures.cpp
M  +1    -0    krita/ui/opengl/kis_opengl_image_textures.h

http://commits.kde.org/calligra/5be4f8fdd542a455a51a69670c545098136fe760
Comment 12 David REVOY 2013-09-28 12:53:19 UTC
Thanks! It works perfectly now  :-)