Make it possible to have checks smaller than 32x32 in the opengl canvas

BUG:325387